--- a/myproject/src/Home/Exploretopprgrm.css
+++ b/myproject/src/Home/Exploretopprgrm.css
@@ -1,8 +1,27 @@
 .maincard{
-    height: 15vh;
-    width: 4vw;
+    height: 12vh;
+    border-radius: 0px;
+    width: 20vw;
+    
 }
 .maincard img{
-    height: 12vh;
-    width: 6vw;
+    height: 10vh;
+    width: 5vw;
+}
+.exploretopprgrmmaindiv{
+    margin: 0 7vw;
+    margin-top: 6vh;
+}
+.subdiv{
+    width: 20vw;
+}
+.exploretopprgrmmaindiv p{
+    font-weight: bold;
+}
+
+.underline-heading {
+  display: inline-block;
+  border-bottom: 2px solid orange;
+  padding-bottom: 8px; /* adjust this to control distance from text */
+  margin-bottom: 5vh; /* your original request */
 }
